--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "url": "https://github.com/Red-lipped-Batfish-54/scratch/issues"
   },
   "homepage": "https://github.com/Red-lipped-Batfish-54/scratch#readme",
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom"
+  },
   "dependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
     "chart.js": "^4.0.1",
     "concurrently": "^7.5.0",
     "cookie-parser": "^1.4.6",
@@ -43,10 +47,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/react": "^13.4.0",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
+    "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
