--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "scratch",
+  "jest": {
+    "verbose": true
+  },
   "version": "1.0.0",
   "description": "Application to create polls and share",
   "main": "index.js",
@@ -8,7 +11,9 @@
     "dev-front": "NODE_ENV=development webpack serve --open",
     "dev-back": "nodemon server/server.js",
     "dev-hour": "npm run dev-back & npm run dev-front",
-    "prod-hour": "npm run build && nodemon server/server.js"
+    "prod-hour": "npm run build && nodemon server/server.js",
+    "test": "jest --verbose",
+    "testjc": "jest --verbose --config=./__test__/jestjc.config.js"
   },
   "repository": {
     "type": "git",
@@ -48,10 +53,15 @@
     "css-loader": "^6.7.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-puppeteer": "^6.1.0",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
+    "supertest": "^6.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
