--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "enzyme": "^3.11.0",
